stylus/view.styl
// View-specific styles

html.home
  .birdy
    float: left
    margin-top: -10px
    margin-right: 30px
    transform: scale(0.85)

    @media PHONE
      display: none

  .hero
    text-align: center
    .totalHits
      display: inline-block
      @media TABLET
        min-width: 185px
      @media DESKTOP
        min-width: 195px

  .content .row
    h3
      ellipsis()

html.essay
  .prompt
    font-style: italic

  .body
    cursor: default
    position: relative
    user-select: none

    .blur > :not(:first-child):not(:nth-child(2))
      color: rgba(255, 255, 255, 0)
      text-shadow: #000 0 0 9px

      .ie10 &, .ie11 &
        color: rgba(230, 230, 230, 0.6)

  .subscribe-on-blur
    body_font()
    background: BLUE_LIGHTER
    border-radius: 40px
    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.8)
    left: 0
    margin: 0 7.5%
    padding: 20px 7.5% 40px 7.5%
    position: absolute
    right: 0
    text-align: center
    top: 325px
    z-index: 1 // cover third-party iframes

    @media PHONE
      border-radius: 15px
      margin: 0 2.5%
    @media TABLET
      border-radius: 30px
      margin: 0 5%

    h4
      body_font()
      &:last-child
        margin-bottom: 0

html.notetype, html.course, html.college
  @media PHONE
    .toolbar-ghost
      display: none

html.note, html.essay
  .birdy
    margin-left: auto
    margin-right: auto
    transform: scale(0.85)
  .birdy-stop
    margin-bottom: 30px

html.signup, html.signup2
  background: center center url('https://cdn.apstudynotes.org/images/hero/colleges.jpg') no-repeat fixed
  background-size: cover

html.login, html.login-forgot, html.login-reset
  background: center center url('https://cdn.apstudynotes.org/images/hero/amjed-full.jpg') no-repeat fixed
  background-size: cover

html.landing-page
  .hero
    min-height: 240px
    padding-top: 20px
    text-align: center

  .header
    border: 0
    background: none
    .search
      display: none

    .left
      li a
        {LINK}
          border-right: 1px solid transparent
        {HOVER}
          border-right: HEADER_BORDER_FOCUS
    .right
      li
        &:nth-child(1), &:nth-child(2), &:nth-child(3)
          display: none
        a
          {LINK}
            border-left: 1px solid transparent
          {HOVER}
            border-left: HEADER_BORDER_FOCUS

  .footer
    .quote, .links
      display: none

  .row
    text-align: center
    ul
      text-align: left
    img
      height: 120px
      margin-bottom: 12px
    p
      margin-left: 5px
      margin-right: 5px

  .twitter-tweet
    margin-left: auto
    margin-right: auto

  .credit-card-logos
    width: 225px
    margin-left: 20px
    margin-right: 20px

html.essay-review
  .pricing
    margin-top: 40px
    margin-bottom: 40px
    border: 1px solid GRAY
    h2
      background-color: palette('Orange', '100')
      margin: -25px -25px 25px -25px
      padding: 20px
    .col3
      padding: 25px
      height: 100%
    .featured
      position: relative
      border: 1px solid GRAY
      border-bottom: none
      margin-top: -20px
      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5)
      h2
        background-color: palette('Orange')
        color: white
    small
      font-style: italic
      font-size: 70%
    ul
      list-style-type: none

html.admin
  a.publish
    {LINK}
      color: palette('Red')
  a.unpublish
    {LINK}
      color: palette('Green')

html.search
  .content
    @media PHONE
      padding-top: 0
    @media TABLET
      padding-top: 10px
    @media DESKTOP
      padding-top: 15px

  .hero h1
    ellipsis()

html.testimonials
  blockquote
    border-left: 0
    padding: 0
    margin: 0 20px 70px 20px
    div
      margin-left: 55px
      position: relative
      &:before
        content: '\201C'
        display: block
        color: GRAY_LIGHTER
        position: absolute
        left: -65px
        top: 35px
        font-size: 140px

  cite
    margin-top: 15px
    margin-left: 55px

